my_cluster/external_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-1
  namespace: ingress-nginx
spec:
  ports:
  - name: external-ingress
    port: 5080
    targetPort: 80
  type: LoadBalancer
  selector:
    name: ingress-nginx-controller
    namespace: ingress-nginx
