my_cluster/ingress_deployment_start.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-foo
  labels:
    app: kuber-foo
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: http-server-1
  template:
    metadata:
      labels:
        app: http-server-1
    spec:
      containers:
        - name: myapp
          image: dodexq/kuber_loadbalancing:v2
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: http-server-1
  ports:
  - port: 80
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-bar
  labels:
    app: kuber-bar
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: http-server-2
  template:
    metadata:
      labels:
        app: http-server-2
    spec:
      containers:
        - name: myapp
          image: dodexq/kuber_loadbalancing:v2
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: http-server-2
  ports:
  - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - pathType: Prefix
        path: /foo
        backend:
          service:
            name: foo-service
            port:
              number: 80
      - pathType: Prefix
        path: /bar
        backend:
          service:
            name: bar-service
            port:
              number: 80
---
